This documents significant changes in the 93u+m branch of AT&T ksh93.
For full details, see the git log at: https://github.com/ksh93/ksh

Any uppercase BUG_* names are modernish shell bug IDs.

2022-02-02:

- Fixed the -a/allexport option to export all variables that are assigned
  values. Previously, arithmetic $((var=1)) or conditional ${var:=value}
  assignments were not exported even with allexport on.

2022-02-01:

- Upon invocation, the interactive shell no longer leaves the user without
  a line editor if the VISUAL or EDITOR variable does not indicate emacs,
  gmacs or vi; instead, it now turns on the emacs option by default.

2022-01-31:

- Improved keyboard support for the vi and emacs built-in line editors:
  - Added support for Home key sequences ^[[1~ and ^[[7~ as well as End key
    sequences ^[[4~ and ^[[8~.
  - Added support for arrow key sequences ^[OA, ^[OB, ^[OC and ^[OD.
  - Added support for the following keyboard shortcuts (if the platform
    supports the expected escape sequence):
    - Ctrl-Left Arrow:  Go back one word
    - Alt-Left Arrow:   Go back one word        (Not supported on Haiku)
    - Ctrl-Right Arrow: Go forward one word
    - Alt-Right Arrow:  Go forward one word     (Not supported on Haiku)
    - Ctrl-G:           Cancel reverse search
    - Ctrl-Delete:      Delete next word        (Not supported on Haiku)
  - Added a keybind for the Insert key, which differs in the emacs and vi
    editing modes:
    - In emacs mode, Insert escapes the next character.
    - In vi mode, Insert will switch the editor to insert mode (like in vim).

- Fixed a bug in SIGINT handling: if a script ran an external command that
  interrupted itself (and only itself, not the process group) with SIGINT,
  the script that ran the command was also interrupted.

2022-01-28:

- Fixed longstanding job control breakage that occurred on the interactive
  shell when suspending (Ctrl+Z) an external command invoked by a dot script