@@ -3,6 +3,14 @@ For full details, see the git log at: https://github.com/ksh93/ksh
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-02-04:
+
+- Adding a .unset discipline function to an indexed array no longer adds
+  an extra '[0]' element to the array.
+
+- Unsetting all elements of an indexed array no longer adds a spurious
+  '[0]' element to the array.
+
 2022-02-02:
 
 - Fixed the -a/allexport option to export all variables that are assigned
